10-somesvc/10-kube-basic/deployment-somesvc-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somesvc-v1
spec:
  selector:
    matchLabels:
      app: somesvc
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: somesvc
        version: v1
    spec:
      containers:
      - name: somesvc
        image: stesie/somesvc:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
