10-somesvc/10-kube-basic/deployment-somesvc-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somesvc-v2
spec:
  selector:
    matchLabels:
      app: somesvc
      version: v2
  replicas: 2
  template:
    metadata:
      labels:
        app: somesvc
        version: v2
    spec:
      containers:
      - name: somesvc
        image: stesie/somesvc:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
