10-somesvc/10-kube-basic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: somesvc
  labels:
    app: somesvc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: somesvc
