10-somesvc/10-kube-basic/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: somesvc-ingress
spec:
  rules:
  - host: somesvc.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: somesvc
          servicePort: 80
